	rov_jsaxis and rov_joystick to common, and added the union as described.
	Also made rov_arduino contain an rov_keybinds structure.
	* src/ui/keyboard.h, src/ui/keyboard.c: Added these to handle keyboard
	interaction with the ROV program. Currently support 'l': reload the
	.keybinds file at runtime.
	* TODO: Updated TODO.

2014-3-22 Joe Jevnik <joejev@gmail.com>
	* lib/*: Moved screen and library functions into their own libraries to
	be linked with the main project.
	* src/ui/main: Made the changes for the libraries.
	* src/ui/controls.c: Removed all library functions.
	* src/common.h: Removed the structures defined by my new libraries.
	* src/CMakeLists.txt: Added the static linking of the 2 libraries.
	* src/librov/*: Added headers for librov.

2014-4-21 Joe Jevnik <joejev@gmail.com>
	* src/controls/pinlayout.h, src/controls/pinlayout.c: Added a
	configurable pin layout parsing mechanism.
	* src/ui/main.c: Added the sections to read from the .pins file.
	* src/controls/controls.c: Started sending the proper signals to the
	arduino.

2014-4-21 Joe Jevnik <joejev@gmail.com>
	* src/ui/keyboard.h, src/ui/keyboard.c: Added a feature to load the
	pin layout at runtime.
	* src/comm/opcode.h: Added the pinstate opcode.
	* src/comm/comm.h, src/comm/comm.c: Added the set_pinstate() functions
	to set a pin to input or output.
	* src/arduino.c: Added src/arduino.c

2014-4-24 Joe Jevnik <joejev@gmail.com>
	* src/micro/arduino.c, src/micro/recv.c: Added a directory for the
	code on microcontrollers.
	* src/controls/controls.c: Changed the joystick behavior for button
	* build/.pins: Added a sample pin config file.
	* src/motor/motor.c, src/motor/motor.h: Removed these files.
	* src/controls/pinlayout.h, src/controls/pinlayout.c, src/common.h:
	Removed motor structs and have the arduino hold it's own state, motors
	are represented as unsigned char's and lights as bools.
	* src/ui/main.c: Updated init_arduino() call.