@@ -113,3 +113,6 @@
 	Removed motor structs and have the arduino hold it's own state, motors
 	are represented as unsigned char's and lights as bools.
 	* src/ui/main.c: Updated init_arduino() call.
+
+2014-4-27 Joe Jevnik <joejev@gmail.com>
+	* src/controls/controls.c: Changed the scaling from [0,1023] to [0,255]
